# InnovateTRIZ

./: .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml  requirements.txt  triz48.xls
.claude/skills/build-android-apk/: SKILL.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/create-triz-tests/: SKILL.md
.claude/skills/fix-docstring-format/: SKILL.md
.claude/skills/fix-members-short-description/: SKILL.md
.claude/skills/lookup-flet-docs/: SKILL.md
.claude/skills/run-triz-tests/: SKILL.md
.triz_data/: triz_sessions.db
android/: README.md
docs/: AI状态UI测试文档.md  API.md  Android打包模块交接.md  Android编译指南.md  BRAINSTORM_TEST_GUIDE.md  ENGINEERING_ARCHITECTURE.md  PROGRESS.md  UI_TEST_GUIDE.md  UI模块交接.md  refactoring_plan.md  工作流程.md  核心模块交接.md  测试模块交接.md
exports/: triz_history_20260421_221235.json  triz_history_20260421_221238.txt
src/: main.py
src/ai/: ai_client.py  connectivity.py
src/ai/prompts/: __init__.py  builder.py  loader.py  templates.py
src/config/: constants.py  settings.py
src/core/: matrix_selector.py  principle_service.py  triz_engine.py
src/data/: excel_loader.py  local_storage.py  models.py  triz_constants.py
src/ui/: __init__.py  ai_settings_dialog.py  app_shell.py  parameter_ui.py  solution_ui.py
src/ui/components/: __init__.py  category_badge.py  loading_indicator.py  principle_card.py
src/ui/matrix_tab/: __init__.py  matrix_page.py
src/ui/principles_tab/: __init__.py  principles_list.py
src/ui/settings_tab/: __init__.py  settings_tab.py
src/ui/state/: __init__.py  ai_state.py  app_state.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  test_ai_client.py  test_ai_parameter_detection.py  test_ai_status.py  test_ai_status_flow.py  test_apk_log.py  test_brainstorm_flow.py  test_core.py  test_entry_consistency.py  test_env_fallback.py  test_fuzzy_param_matching.py  test_integration.py  test_log_system.py  test_manual_save_history.py  test_matrix_ai.py  test_matrix_query.py  test_openai_optional.py  test_pre_build.py  test_prompt_loader.py  test_provider_config_decryption.py  test_storage_path.py  test_triz_48_data.py  test_ui.py
